--- a/i18n/fr_CA/LC_MESSAGES/src/pages/index.js.po
+++ b/i18n/fr_CA/LC_MESSAGES/src/pages/index.js.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-07-20 10:59-0700\n"
+"POT-Creation-Date: 2018-07-23 11:30-0700\n"
 "PO-Revision-Date: 2018-07-20 10:33-0700\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr_CA\n"
@@ -14,27 +14,27 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
 
-#: 46:24 src/pages/index.js
-msgid "Developers"
-msgstr "Développeurs"
+#: 25:37 src/pages/index.js
+msgid "Welcome"
+msgstr "Bienvenue chez Aurora!"
 
-#: 35:24 src/pages/index.js
+#: 42:24 src/pages/index.js
 msgid "Designers"
 msgstr "Concepteurs"
 
-#: 57:24 src/pages/index.js
-msgid "Writers"
-msgstr "Écrivains"
+#: 54:24 src/pages/index.js
+msgid "Developers"
+msgstr "Développeurs"
 
-#: 68:24 src/pages/index.js
+#: 66:24 src/pages/index.js
+msgid "Writers"
+msgstr "Écrivain(e)s"
+
+#: 78:24 src/pages/index.js
 msgid "Data Scientists"
 msgstr "Scientifiques de(s) données"
 
-#: 79:24 src/pages/index.js
-msgid "Partners"
-msgstr "Partenaires"
-
-#: 20:35 src/pages/index.js
-msgid "Welcome"
-msgstr "Bienvenue chez Aurora!"
+#: 90:24 src/pages/index.js
+msgid "Contributors"
+msgstr "Contributeurs"
 
