Played with language translation
Had to rework all my code to fit witht the i18n module.

--- a/src/locales/en/CodeBlock.json
+++ b/src/locales/en/CodeBlock.json
@@ -1,4 +1,6 @@
 {
     "COPY CODE": "COPY CODE",
-    "Copied!": "Copied!"
+    "Copied!": "Copied!",
+    "SHOW CODE": "SHOW CODE",
+    "HIDE CODE": "HIDE CODE"
 }
