--- a/src/locales/fr/CodeBlock.json
+++ b/src/locales/fr/CodeBlock.json
@@ -1,4 +1,6 @@
 {
     "COPY CODE": "COPIER LE CODE",
-    "Copied!": "Copié!"
+    "Copied!": "Copié!",
+    "SHOW CODE": "MONTRER LE CODE",
+    "HIDE CODE": "CACHER LE CODE"
 }
