Added Testing and Redid the translation
Lots of changes, perhaps it would be best to wait until Tuesday to go over everything and talk about merging.

--- a/src/locales/fr/PageHeader.json
+++ b/src/locales/fr/PageHeader.json
@@ -1,7 +1,9 @@
 {
-    "heading": "Shwmae, bonjour, and hola!",
-    "description": "en français ",
-    "Overview": "Aperçu",
-    "Identity": "Identité",
-    "Content": "Contenu"
-  }
+  "heading": "Shwmae, bonjour, and hola!",
+  "description": "en français ",
+  "Overview": "Aperçu",
+  "Component": "Component FR",
+  "Identity": "Identité",
+  "Content": "Contenu",
+  "Data": "Données"
+}
