Added new translation to index and header

--- a/src/locales/en/PageHeader.json
+++ b/src/locales/en/PageHeader.json
@@ -4,5 +4,6 @@
     "Components": "Components",
     "Overview": "Overview",
     "Identity": "Identity",
-    "Content": "Content"
+    "Content": "Content",
+    "Data":"Data"
 }
