--- a/src/locales/fr/PageHeader.json
+++ b/src/locales/fr/PageHeader.json
@@ -1,7 +1,9 @@
 {
     "heading": "Shwmae, bonjour, and hola!",
     "description": "en français ",
+    "Components": "Components",
     "Overview": "Aperçu",
     "Identity": "Identité",
-    "Content": "Contenu"
+    "Content": "Contenu",
+    "Data":"Données"
   }
