--- a/src/locales/fr/FrontPage.json
+++ b/src/locales/fr/FrontPage.json
@@ -2,15 +2,15 @@
     "TopIntro": "Le système de conception Aurora est un guide de conception central créé par la Division de la collaboration numérique du gouvernement du Canada pour nos produits numériques. Tout ce dont vous avez besoin pour créer des produits numériques attrayants, cohésifs, pratiques, accessibles et agréables se trouve dans notre système de conception. Le système de conception Aurora sera toujours gratuit, ouvert, collaboratif et en évolution.",
     "MainCTA":"Démarrez",
     "GithubLink":"Trouvez-nous sur Github",
-    "DownloadLink":"Téléchargez la trousse IU d’Aurora",
+    "DownloadLink":"Téléchargez la trousse IU",
     "IAM":"Je suis un(e)...",
-    "Designers": "Concepteurs",
+    "Designers": "Concepteur",
     "DesignerCTA":"Commencez à dessiner",
-    "Developers": "Développeurs",
+    "Developers": "Développeur",
     "DeveloperCTA":"Commencez à coder",
-    "Writers": "Écrivain(e)s",
+    "Writers": "Écrivain(e)",
     "WriterCTA":"Commencez à taper",
-    "DataScientists": "Scientifique de(s) données",
+    "DataScientists": "Scientifique des données",
     "DataScientistCTA":"Commencez à analyser",
     "AboutAurora":"À propos de système de conception Aurora ",
     "SimpleFlexible":"Simple et souple",
