Added components translation

--- a/src/locales/fr/PageHeader.json
+++ b/src/locales/fr/PageHeader.json
@@ -1,7 +1,5 @@
 {
-    "heading": "Shwmae, bonjour, and hola!",
-    "description": "en français ",
-    "Components": "Components",
+    "Components": "Composantes",
     "Overview": "Aperçu",
     "Identity": "Identité",
     "Content": "Contenu",
