New index page content and translations (#29)
* Added new translation to index and header

* Language changes

* Added components translation

--- a/src/locales/fr/PageHeader.json
+++ b/src/locales/fr/PageHeader.json
@@ -1,7 +1,7 @@
 {
-    "heading": "Shwmae, bonjour, and hola!",
-    "description": "en français ",
+    "Components": "Composantes",
     "Overview": "Aperçu",
     "Identity": "Identité",
-    "Content": "Contenu"
+    "Content": "Contenu",
+    "Data":"Données"
   }
