--- a/src/locales/en/PageHeader.json
+++ b/src/locales/en/PageHeader.json
@@ -1,8 +1,7 @@
 {
-    "heading": "Shwmae, bonjour, and hola!",
-    "description": "Available in English, Welsh, French, and Spanish, with more translations coming soon. doopoll is great for local, multi-lingual, and global organisations.",
     "Components": "Components",
     "Overview": "Overview",
     "Identity": "Identity",
-    "Content": "Content"
+    "Content": "Content",
+    "Data":"Data"
 }
