--- a/src/locales/en/FrontPage.json
+++ b/src/locales/en/FrontPage.json
@@ -1,5 +1,6 @@
 {
     "AuroraDesignSystem":"Aurora Design System",
+    "Tagline":"Excellent applications need design systems. This is Aurora.",
     "TopIntro": "Aurora Design System is a central design guide created by the Digital Collaboration Division within the Government of Canada for our digital products. Everything you need to create attractive, cohesive, practical, accessible and enjoyable digital products can be found in our design system. Aurora design system will always be free, open, collaborative and evolving.",
     "MainCTA":"Get started",
     "GithubLink":"Find us on GitHub",
